--- a/网站练习.css
+++ b/网站练习.css
@@ -1,9 +1,14 @@
 body{
 	margin: 0;
 }
+*{
+	margin: 0;
+	box-sizing:border-box;
+}
 .container{
 	width: 1024px;
 	margin: 0 auto;
+	position: relative;
 }
 .header-box{
 	position: relative;
@@ -52,25 +57,33 @@ body{
 	color: white;
 }
 .button{
-	font-size: 12px;
-	color:white;
+	display: block;
+	line-height: 11.2px;
+	width: 231px;
+	padding: 12px 35px;
+	margin: 8px 0px;
+	color: #fff;
+	font-size: 10px;
+	background-color: rgba(255,255,255,0.1);
+	font-style: none;
+	text-align: center;
+
 }
 .bottom{
 	width:1024px;
-	height:536px;
+	height:410px;
 	background:url(img-bg-1350.jpg);
 	background-size:100%;
 	top:768px;
-	background-repeat: no-repeat;
 }
 .squ{
-	width: 660px;
-	height: 320px;
-	background: red;
-	top: 700px;
-	left: 382px;
-	position: absolute;
-	float: 
+	width: 821px;
+	height: 353px;
+	padding: 0px 58px;
+	margin: 0 auto;
+	margin-top: -48px;
+	position: relative;
+	z-index: 100;
 }
 .p1{
 	width: 220px;
@@ -96,7 +109,7 @@ body{
 	background-repeat: no-repeat;
 	background-size: contain;
 }
-.w1{
+.w1,.w2,.w3{
 	font-weight: normal;
 	letter-spacing: 3.75px;
 	font-size: 10px;
@@ -106,7 +119,99 @@ body{
 	color: white;
 	padding-left: 15px;
 }
-.w2{
+.top-menu{
+	height: 57px;
+	padding:0 22px;
+	display: flex;
+	justify-content:space-between;
+	position:absolute;
+	width: 100%;
+	top:0;
+	left:0;
+	z-index:2000;
+}
+.left,.right{
+	height: 100%;
+	width:128px;
+	line-height: 57px;
+	text-align: center;
+	font-size: 12px;
+	color:#fff;
+}
+.left{
+	background:url(QQ图片20180607162039.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+}
+.right{
+	background:url(QQ图片20180607162120.png);
+	background-repeat: no-repeat;
+	background-position: right center;
+}
+.center{
+	height:100%;
+	line-height: 57px;
+	width:190px;
+	text-align: center;
+	color: #fff;
+	font-size: 20px;
+	font-weight: 100;
+}
+.title-box{
+	text-align:center;
+	padding-top: 90px;
+	height: 318px; 
+}
+.title-box h2{
+	margin: 25px 0 40px 0;
+	font-size: 50px;
+	font-weight: 500;
+	line-height: 60px;
+	letter-spacing: 4px;
+}
+.title-box h6{
+	font-size: 12px;
+	font-weight: normal;
+	letter-spacing: 2px;
+	line-height: 13px;
+	margin: 12px 0 18px 0;
+}
+.product-list{
+	margin: 0 auto;
+	width: 705px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.product{
+	width:235px;
+	height: 155px;
+	/*border:1px solid black;*/
+}
+.product:nth-child(1){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/wireless-speaker-systems/beosound-shape.jpg);
+	background-size:100% auto;
+}
+.product:nth-child(2){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/televisions/beovision-eclipse.jpg);
+	background-size:100% auto;
+}
+.product:nth-child(3){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/speakers/beolab-50.jpg);
+	background-size:100% auto;
+}
+.product:nth-child(4){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/headphones/beoplay-h9i.jpg);
+	background-size:100% auto;
+}
+.product:nth-child(5){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/portable-bluetooth-speakers/beoplay-p6-lifestyle-3.jpg);
+	background-size:100% auto;
+}
+.product:nth-child(6){
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/categories/sound-systems/beosound-core.jpg);
+	background-size:100% auto;
+}
+.v1,.v2,.v3,.v4,.v5,.v6{
 	font-weight: normal;
 	letter-spacing: 3.75px;
 	font-size: 10px;
@@ -116,13 +221,60 @@ body{
 	color: white;
 	padding-left: 15px;
 }
-.w3{
+.picture-list{
+	margin: 0 auto;
+	width: 712px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.picture{
+	height:170px; 
+}
+.picture:nth-child(1){
+	width: 178px;
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/stories/design-as-a-group-effort-01.jpg);
+	background-size:100% auto;
+}
+.picture:nth-child(2){
+	width: 178px;
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/stories/the-krane.jpg);
+	background-size:100% auto;
+}
+.picture:nth-child(3){
+	width: 356px;
+	background:url(https://www.bang-olufsen.com/~/mediaV3/home/frontpage/stories/harmonies/desktop/harmonies-story.jpg);
+	background-size:100% auto;
+}
+.story-list{
+	margin: 0 auto;
+	width: 712px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.story{
+	height: 120px; 
+	padding-top: 30px;
+	float: left;
+	
+}
+.story h2{
+	margin: 10px 0 10px 0;
+	font-size: 15px;
 	font-weight: normal;
-	letter-spacing: 3.75px;
-	font-size: 10px;
-	line-height: 39px;
-	margin-top: 10px;
-	margin-bottom: 30px;
-	color: white;
-	padding-left: 15px;
+}
+.story {
+	opacity: .6;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 21px;
+    font-family: "Gotham SSm A","Gotham SSm B";
+}
+.story:nth-child(1){
+	width: 178px;
+}
+.story:nth-child(2){
+	width: 178px;
+}
+.story:nth-child(3){
+	width: 356px;
 }
